--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,53 +17,71 @@
         <img id="mercury" src="/img/mercury.jpg">
         <img id="sun" src="/img/sun.jpg">
       </a-assets>
-      <a-camera position="0 1 2">
+      <a-camera position="-7 17 -27" rotation="-17 -164 0">
         <a-cursor color="#10f900"></a-cursor>
       </a-camera>
-      <a-sphere src="#neptune" position="28 2.127 -20" radius="2" >
-        <a-animation direction="alternate" attribute="position" from="28 2.127 -20" to="28 4 -20" repeat="3" begin="click"></a-animation>
+      <!-- Neptune -->
+      <a-sphere src="#neptune" position="-50.835 4.913 4.463" radius="2">
+        <a-animation direction="alternate" attribute="position" from="-50.835 4.913 4.463" to="-50.835 8 4.463" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="26 -2 -19" value="Neptune" width="20"></a-text>
-      <a-sphere src="#uranus" position="21 2.127 -20" radius="2.5" >
-        <a-animation direction="alternate" attribute="position" from="21 2.127 -20" to="21 4 -20" repeat="3" begin="click"></a-animation>
+
+      <!-- Uranus -->
+      <a-sphere src="#uranus" position="4.875 4.313 -43.733" radius="2.5">
+        <a-animation direction="alternate" attribute="position" from="4.875 4.313 -43.733" to="4.875 8 -43.733" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="19.5 -2 -19" value="Uranus" width="20"></a-text>
-      <a-ring class="saturn" src="#saturn_ring" position="13 2.127 -20" rotation="60 0 0" radius-inner="3.2" radius-outer="3.7">
-        <a-animation direction="alternate" attribute="position" from="13 2.127 -20" to="13 4 -20" repeat="3" begin="click"></a-animation>
-      </a-ring>
-      <a-sphere class="saturn" src="#saturn" position="13 2.127 -20" radius="2.7" >
-        <a-animation direction="alternate" attribute="position" from="13 2.127 -20" to="13 4 -20" repeat="3" begin="click"></a-animation>
+
+      <!-- Saturn -->
+      <a-torus class="saturn" src="#saturn_ring" position="28.16 4 -22" rotation="60 0 0" radius="4" radius-tubular="0.1">
+        <a-animation direction="alternate" attribute="position" from="28.16 4 -22" to="28.16 8 -22" repeat="3" begin="click"></a-animation>
+      </a-torus>
+      <a-sphere class="saturn" src="#saturn" position="28.16 4 -22" radius="2.7" material="" geometry="">
+        <a-animation direction="alternate" attribute="position" from="28.16 4 -22" to="28.16 8 -22" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      </a-entity>
-      <a-text color="white" position="11.5 -2 -19" value="Saturn" width="20"></a-text>
-      <a-sphere src="#jupiter" position="5 2.127 -20" radius="3.5" >
-        <a-animation direction="alternate" attribute="position" from="5 2.127 -20" to="5 4 -20" repeat="3" begin="click"></a-animation>
+
+      <!-- Jupiter -->
+      <a-sphere src="#jupiter" position="-20.29 5.105 15.197" radius="3.5">
+        <a-animation direction="alternate" attribute="position" from="-20.29 5.105 15.197" to="-20.29 9 15.197" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="3.5 -2 -19" value="Jupiter" width="20"></a-text>
-      <a-sphere src="#mars" position="-1 2.127 -20" radius="2" >
-        <a-animation direction="alternate" attribute="position" from="-1 2.127 -20" to="-1 4 -20" repeat="3" begin="click"></a-animation>
+
+      <!-- Mars -->
+      <a-sphere src="#mars" position="17.745 4.992 7.771" radius="2">
+        <a-animation direction="alternate" attribute="position" from="17.745 4.992 7.771" to="17.745 8 7.771" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="-2 -2 -19" value="Mars" width="20"></a-text>
-      <a-sphere src="#moon" position="-5 5 -20" radius="0.35"" >
-        <a-animation direction="alternate" attribute="position" from="-5 5 -20" to="-5 6 -20" repeat="3" begin="click"></a-animation>
+
+      <!-- Moon -->
+      <a-sphere src="#moon" position="-7.093 7.844 -15.335" radius="0.35">
+        <a-animation direction="alternate" attribute="position" from="-7.093 7.844 -15.335" to="-7.093 9.5 -15.335" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="-5 6 -19" value="Moon" width="20"></a-text>
-      <a-sphere src="#earth" position="-8 2.127 -20" radius="2.5"" >
-        <a-animation direction="alternate" attribute="position" from="-8 2.127 -20" to="-8 4 -20" repeat="3" begin="click"></a-animation>
+
+      <!-- Earth -->
+      <a-sphere src="#earth" position="-8.386 5.215 -12.659" radius="2.5">
+        <a-animation direction="alternate" attribute="position" from="-8.386 5.215 -12.659" to="-8.386 8 -12.659" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="-8.7 -2 -19" value="Earth" width="20"></a-text>
-      <a-sphere src="#venus" position="-14 2.127 -20" radius="2" >
-        <a-animation direction="alternate" attribute="position" from="-14 2.127 -20" to="-14 4 -20" repeat="3" begin="click"></a-animation>
+
+      <!-- Venus -->
+      <a-sphere src="#venus" position="3.19 5.677 -8.855" radius="2">
+        <a-animation direction="alternate" attribute="position" from="3.19 5.677 -8.855" to="3.19 9 -8.855" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="-14.5 -2 -19" value="Venus" width="20"></a-text>
-      <a-sphere src="#mercury" position="-18.5 2.127 -20" radius="1">
-        <a-animation direction="alternate" attribute="position" from="-18.5 2.127 -20" to="-18.5 4 -20" repeat="3" begin="click"></a-animation>
+
+      <!-- Mercury -->
+      <a-sphere src="#mercury" position="6.671 5.959 -0.331" radius="1">
+        <a-animation direction="alternate" attribute="position" from="6.671 5.959 -0.331" to="6.671 9 -0.331" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="-19.5 -2 -19" value="Mercury" width="20"></a-text>
-      <a-sphere src="#sun" position="-27 2.127 -20" radius="5"">
-        <a-animation direction="alternate" attribute="position" from="-27 2.127 -20" to="-27 4 -20" repeat="3" begin="click"></a-animation>
+      <!-- Orbits -->
+      <a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="0.132 6.055 0.489" rotation="-90 0 0" material="" geometry="radius:6.53;radiusTubular:0.01">
+      </a-torus><a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="-9.093 5.262 -12.306" rotation="-50 0 0" geometry="radius:4.42;radiusTubular:0.01">
+      </a-torus><a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="0.031 5.838 0.33" rotation="-90 0 0" geometry="radius:9.5;radiusTubular:0.01" material="">
+      </a-torus><a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="0.031 4.659 -0.319" rotation="-90 0 0" geometry="radius:15.069999999999995;radiusTubular:0.010000000000000009" material="">
+      </a-torus><a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="0.031 4.659 -0.319" rotation="-90 0 0" geometry="radius:19.499999999999996;radiusTubular:0.01" material="">
+      </a-torus><a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="0.031 4.659 -0.319" rotation="-90 0 0" geometry="radius:26.509999999999998;radiusTubular:0.01" material="">
+      </a-torus><a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="0.031 4.659 -0.319" rotation="-90 0 0" geometry="radius:35;radiusTubular:0.01" material="">
+      </a-torus><a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="0.031 4.659 -0.319" rotation="-90 0 0" geometry="radius:43.95000000000001;radiusTubular:0.01" material="">
+      </a-torus><a-torus height="0.5" color="white" radius="25" arc="360" radius-tubular="0.1" segments-radial="50" position="0.031 4.659 -0.319" rotation="-90 0 0" geometry="radius:51.62000000000001;radiusTubular:0.01" material="">
+      </a-torus>
+      <!-- Sun -->
+      <a-sphere src="#sun" position="0.172 6.171 0.286" radius="5">
+        <a-animation direction="alternate" attribute="position" from="0.172 6.171 0.286" to="0.172 9 0.286" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="white" position="-28 -5 -19" value="Sun" width="20"></a-text>
       <a-sky src="#sky"></a-sky>
     </a-scene>
   </body>
