Adding title and fixing text positions

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <title>Solar System</title>
+    <meta name="description" content="Solar System Model">
   </head>
   <body>
     <a-scene>
@@ -47,13 +49,13 @@
       <a-sphere src="#jupiter" position="-20.29 5.105 15.197" radius="3.5">
         <a-animation direction="alternate" attribute="position" from="-20.29 5.105 15.197" to="-20.29 9 15.197" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="#fff" position="-20.29 9.105 15.197" rotation="0 160 0" value="Jupiter" width="40"></a-text>
+      <a-text color="#fff" position="-14.8 10.37 11" rotation="0 160 0" value="Jupiter" width="40"></a-text>
 
       <!-- Mars -->
       <a-sphere src="#mars" position="17.745 4.992 7.771" radius="2">
         <a-animation direction="alternate" attribute="position" from="17.745 4.992 7.771" to="17.745 8 7.771" repeat="3" begin="click"></a-animation>
       </a-sphere>
-      <a-text color="#fff" position="18.745 9 7.771" rotation="0 160 0" value="Mars" width="40"></a-text>
+      <a-text color="#fff" position="19.65 9.68 5.86" rotation="0 160 0" value="Mars" width="40"></a-text>
 
       <!-- Moon -->
       <a-sphere src="#moon" position="-7.093 7.844 -15.335" radius="0.35">
